tests/paczka2/big_fuzzy/63120462.err
Error in line 18: 9jBV9XFK S137 48,7
Error in line 20: 7TBNHiLbuH A992 42,3
Error in line 35: 7TBNHiLbuH A639 40,6
Error in line 51: rgH4R A992 22,3
Error in line 37: 7TBNHiLbuH A992 88,3
Error in line 54: vVM8 S137 65,7
Error in line 66: vVM8 A454 22,5
Error in line 69: A454 A454 27,6
Error in line 73: 9jBV9XFK A992 17,2
Error in line 87: 7TBNHiLbuH A992 -2,6
Error in line 81: ew0jo5aoQai S137 58,9
Error in line 101: ew0jo5aoQai A454 87,0
Error in line 93: rgH4R S137 84,8
Error in line 105: ZGZ89U34I A454 64,9
Error in line 118: ew*jo5aoQai A639 7*,*
Error in line 122: 7TBNHiLbuH A992 359,4
Error in line 123: 7TBNHiLbuH A454 83,7
Error in line 117: vVM8 A639 156,1
Error in line 127: 7TBNHiLbuH A639 -1,2
Error in line 124: 7TBNHiLbuH A639 40,3
Error in line 130: 7TBNHiLbuH A992 3,1
Error in line 133: A454 A992 30,1
Error in line 120: ew0jo5aoQai A639 20,3
Error in line 148: vVM8 A992 47,7
Error in line 145: 9jBV9XFK A639 57,2
Error in line 157: vVM8 A639 63,9
Error in line 153: ZGZ89U34I A454 15,5
Error in line 154: 7TBNHiLbuH A454 354,3
Error in line 168: A454 A992 99,2
Error in line 205: rgH4R A992 8,4
Error in line 212: ew0jo5aoQai A639 52,3
Error in line 222: A454 A639 -4,0
Error in line 229: ew0jo5aoQai A454 83,2
Error in line 216: A454 A639 66,5
Error in line 241: vVM8 S137 77,3
Error in line 237: ew0jo5aoQai A639 13,7
